--- a/b_exam_talk.tex
+++ b/b_exam_talk.tex
@@ -27,7 +27,9 @@
 %\usepackage{subfig}
 \usepackage{caption}
 \captionsetup[figure]{labelformat=empty}
+\beamertemplatenavigationsymbolsempty
 
+\DeclareMathOperator*{\argmin}{arg\,min}
 \newcommand{\E}{\mathbb{E}}
 \newcommand{\KG}{\mathrm{KG}}
 \newcommand{\KGs}{\mathrm{KG}}
@@ -113,20 +115,31 @@
 \newcommand{\subar}{A}
 \newcommand{\subpr}{P}
 \newcommand{\subaction}{a}
-
+\renewcommand{\insertnavigation}[1]{}
 \begin{document}
 \title{Sequential Resource Allocation Under Uncertainty: An Index Policy Approach}
 \author{Weici Hu\\
-Adviser: Peter Frazier\\
+Advisor: Peter Frazier\\
 \hspace{1mm}\\
 Cornell ORIE}
-\begin{frame}
+
+\begin{frame}[plain]
    \maketitle
 \end{frame}
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-
+\begin{frame}[plain]
+\tableofcontents[hidesubsubsections]
+\end{frame}
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-\begin{frame}{RMAB problems have many applications in industry}
+\section{Index policy for Restless Multi-armed bandit (RMAB)}
+\subsection{Introduction}
+\begin{frame}[plain]
+\frametitle{RMAB problems have many applications in industry}
+Restless multi-armed bandit (RMAB) is a generalization of multi-armed bandit problem (MAB) by allowing:
+\begin{itemize}
+\item arms that are not pulled to change states
+\item multiple pulls per period
+\end{itemize}
 \begin{figure}[!tbp]
   \centering
   \begin{minipage}[b]{0.55\textwidth}
@@ -143,7 +156,8 @@ Cornell ORIE}
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-\begin{frame}
+\subsection{Problem setup}
+\begin{frame}[plain]
 \frametitle{Problem Setup}
 We consider an MDP $(\allstates,\allactions,\allpr^{\cdot},\allr)$ that consists of K identical sub-processes $(\substates,\subactions,\subpr^{\cdot},\subr)$, specifically,
 \begin{itemize}
@@ -154,12 +168,13 @@ We consider an MDP $(\allstates,\allactions,\allpr^{\cdot},\allr)$ that consists
 \item Transition probability $\allpr^{\allaction}(\allstate',\allstate) = \prod_{x=1}^{K}\subpr^{\subaction_x}(\substate'_x,\substate_x)$.
 \item Starts at an initial state $\allstate_1$.
 \end{itemize}
+I will use the term 'arm' and 'subprocesses' interchangeably.
 \end{frame}
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-\begin{frame}
-\frametitle{Problem Setup Con't}
+\begin{frame}[plain]
+\frametitle{Problem Setup Cont'd}
 \begin{itemize}
 \item A Markov policy $\allp:\allstates\times \allactions \times \{1,...,T\} \rightarrow [0,1]$, with $\allp(\allstate,\allaction,t) = P(\allaction|\allstater_t=\allstate)$ (Our decision).\\ We require $\sum_{\allaction\in\allactions}\allp(\allstate,\allaction,t)=1$.
 $\forall \allstate\in\allstates, \forall 1\leq t\leq T$.
@@ -169,15 +184,35 @@ $\forall \allstate\in\allstates, \forall 1\leq t\leq T$.
 & \underset{\allp\in\allpset}{\text{maximize}}
 & & \mathbb{E}^{\allp}\left[\sum_{t=1}^{T}\allr_t\big(\allstater_t,\allar_t\big)\right] \\
 & \text{subject to}
-& & P^{\allp}(|\allar_t|=m_t)=1, \hspace{3mm}\forall 1\leq t\leq T .
+& & P^{\allp}(||\allar_t||=m_t)=1, \hspace{3mm}\forall 1\leq t\leq T,
 \end{aligned}
 \end{equation}
+where $||\mathbf{v}|| = \sum_{i=1}|v_i|$.
 \end{itemize}
 \end{frame}
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+%\begin{frame}
+%\frametitle{Outline}
+%Restless bandit
+%\begin{itemize}
+%\item We propose an index-based policy for RMAB
+%\begin{itemize}
+%\item Compute 
+%\item df
+%\item dfd
+%\item state the actual algorithm
+%\end{itemize}
+%\item We show that this index-based policy is asymptotically optimal when the constraint $m_t$ and the number of arms $K$ go to infinity at the same rate.
+%\item We conduct numerical studies on some example problems of RMAB
+%\end{itemize}
+%dfdf
+%\end{frame}
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-\begin{frame}
+\begin{frame}[plain]
 \frametitle{Difficulty: Optimal solutions are computationally infeasible}
 Optimal solutions of \eqref{prime} can be obtained with Bellman optimality equations.
 
@@ -190,42 +225,45 @@ The complexity grow exponentially with the number of sub-processes $K$, and beco
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-\begin{frame}
+\subsection{Literature Review}
+\begin{frame}[plain]
 \frametitle{Past attempts}
 \begin{itemize}
-\item Gittins: Proposes Gittin's index policy that is optimal for infinite horizon MAB with single pull per period.
-\item Whittle: Proposes Whittle's policy that is derived from a Lagrangian relaxation of the RMAB, but only for the infinite time horizon case.\\
-conjectures that Whittle's index policy is asymtotically optimal when both the number of arms and the constraints go to infinity, but this is only true under restricted condition. (Weiss and Weber)
-\item Adelman: provides conditions when the gap between the Lagrangian relaxation and the optimal value is bounded by a constant, but does not offer a feasible policy.
+\item \textbf{[Gittins 1979]}: Proposes Gittins index policy that is optimal for infinite horizon MAB with single pull per period.
+\item \textbf{[Whittle 1988]}: Proposes Whittle's policy that is derived from a Lagrangian relaxation of the RMAB, but only for the infinite time horizon case.\\
+\item \textbf{[Weiss and Weber 1990]} Whittle's index policy is asymtotically optimal when both the number of arms and the constraints go to infinity, but this is only true under restricted condition. 
+\item \textbf{[Adelman \& Mersereau 2008]}: Provides a heuristic policy for Weakly Coupled Dynamic Programs (WCDP) based upon value function approximation that decomposes across sub-problems. 
 \end{itemize}
-
-
 \end{frame}
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-
+\subsection{Index policy}
+\begin{frame}[plain]
+\tableofcontents[currentsubsection,subsubsectionstyle=show]
+\end{frame}
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-\begin{frame}
-\frametitle{Pre-computations: 1. Optimal Lagrange Multiplier of \eqref{prime2}}
-Relax the original problem \eqref{prime} to
+\subsubsection{Computation of $\lambdav^*$}
+\begin{frame}[plain]
+\frametitle{Computing Optimal Lagrange Multiplier of \eqref{prime2}}
+We relax the original problem \eqref{prime} to
 \begin{equation}\label{prime2}
 \begin{aligned}
 & \underset{\allp\in\allpset}{\text{maximize}}
 & & \mathbb{E}^{\allp}\left[\sum_{t=1}^{T}\allr_t\big(\allstater_t,\allar_t\big)\right] \\
 & \text{subject to}
-& & \mathbb{E}^{\allp}(|\allar_t|)=m_t, \hspace{3mm}\forall 1\leq t\leq T .
+& & \mathbb{E}^{\allp}(||\allar_t||)=m_t, \hspace{3mm}\forall 1\leq t\leq T.
 \end{aligned}
 \end{equation}
-The Lagrangian relaxation of \eqref{prime2}
+We relax \eqref{prime2} further to 
 \begin{equation}\label{ub}
- P(\lambdav)=\max_{\allp\in \allpset}\mathbb{E}^{\allp}\left[\sum_{t=1}^{T}\allr_t\big(\allstater_t,\allar_t\big)\right]-\sum_{t=1}^T\lambda_t\left(\mathbb{E}^{\allp}[|\allar_t|]-m_t\right).
+ P(\lambdav)=\max_{\allp\in \allpset}\mathbb{E}^{\allp}\left[\sum_{t=1}^{T}\allr_t\big(\allstater_t,\allar_t\big)\right]-\sum_{t=1}^T\lambda_t\left(\mathbb{E}^{\allp}[||\allar_t||]-m_t\right).
  \end{equation} 
 \end{frame}
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-\begin{frame}
-\frametitle{Pre-computations: 1. Optimal Lagrange Multiplier of \eqref{prime2}}
-Decomposition of the Lagrangian relaxation
+\begin{frame}[plain]
+\frametitle{Computing Optimal Lagrange Multiplier of \eqref{prime2}}
+We decompose \eqref{ub} to
 \begin{equation}\label{dec}
 P(\lambdav)=K Q(\lambdav) + \sum_t\lambda_t m_t,
 \end{equation}
@@ -233,17 +271,19 @@ where
 \begin{equation}\label{dpx}
 Q(\lambdav)=\max_{\subp\in \subpset}\mathbb{E}^{\subp}\left[\sum_{t=1}^{T}\subr_t(\substater_t,\subar_t)-\lambda_t \subar_t\right],
 \end{equation}
-is the objective function for sub-process $(\substates,\subactions,\subpr^{\cdot},\subr)$. Definition of policy $\subp$ is similar to $\allp$, with  $\subp(\substate,\subaction,t) = P(\subaction|\substater_t=\substate)$.
+is the objective function for sub-process $(\substates,\subactions,\subpr^{\cdot},\subr)$. 
+
+$\subp$ is defined similarly to $\allp$, with  $\subp(\substate,\subaction,t) = P(\subaction|\substater_t=\substate)$.
 
 \end{frame}
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-\begin{frame}
-\frametitle{Pre-computations: 1. Optimal Lagrange Multiplier of \eqref{prime2}}
-Optimal Lagrange Multiplier $\lambdav^*$ is a solution to the Lagrange dual
+\begin{frame}[plain]
+\frametitle{Computing Optimal Lagrange Multiplier of \eqref{prime2}}
+For index policy we compute an optimal Lagrange Multiplier $\lambdav^*$
 \begin{equation}\label{eq:dual}
-\min_{\lambdav} P(\lambdav) = K\left(\min_{\lambdav}Q(\lambdav)+\sum_t\lambda_t\frac{m_t}{K}\right),
+\argmin_{\lambdav} P(\lambdav) = \argmin_{\lambdav}\left(Q(\lambdav)+\sum_t\lambda_t\frac{m_t}{K}\right),
 \end{equation}
 which can be solved by the following linear program (LP):
 \small
@@ -263,20 +303,21 @@ $V^*(s_1,1)=Q(\lambdav^*)$.
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-\begin{frame}
-\frametitle{Pre-computations: 1. Optimal Lagrange Multiplier of \eqref{prime2}}
+\begin{frame}[plain]
+\frametitle{Computing Optimal Lagrange Multiplier of \eqref{prime2}}
 Remarks:
 \begin{itemize}
-\item Problem \eqref{LP-p} has $O(|\substates|T)$ variables and $O(|\substates||\subactions|)T$ constraints, which is manageable.
-\item $P(\lambda)$ is an point-wise maxdimum of a group of affine functions of $\lambdav$, hence convex in $\lambdav$. \eqref{eq:dual} can also be solved by sub-gradient descent.
+\item Problem \eqref{LP-p} has $O(|\substates|T)$ variables and $O(|\substates||\subactions|T)$ constraints, which is manageable.
+\item $P(\lambda)$ is an point-wise maximum of a group of affine functions of $\lambdav$, hence convex in $\lambdav$. $\lambdav^*$ can also be solved by sub-gradient descent.
 \end{itemize}
 \end{frame}
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-\begin{frame}
-\frametitle{Pre-computations: 2. Occupation Measure $\rho^*$ of an optimal policy of $Q(\lambdav^*)$}
-\textbf{Occupation measure} of a policy $\pi$: the fraction of the time a process spent in each state-action pair at a time step under $\pi$. $\rho(s,a,t) = \pi(s,a,t)P(S_t=s)$.
+\subsubsection{Compute $\rho^*$}
+\begin{frame}[plain]
+\frametitle{Compute occupation measure $\rho^*$ of an optimal policy of $Q(\lambdav^*)$}
+\textbf{Occupation measure} of a policy $\pi$: the fraction of the time a process spends in each state-action pair at a time step under $\pi$. $\rho(s,a,t) = \pi(s,a,t)P(S_t=s)$.
 
 \vspace{0.5cm}
 To compute $\rho^*$, we solve the following linear program (LP):
@@ -296,17 +337,20 @@ To compute $\rho^*$, we solve the following linear program (LP):
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-\begin{frame}
-\frametitle{Pre-computations: 2. Occupation Measure $\rho^*$ of an optimal policy of $Q(\lambdav^*)$}
+\begin{frame}[plain]
+\frametitle{Compute occupation measure $\rho^*$ of an optimal policy of $Q(\lambdav^*)$}
 \begin{Lemma}\label{th:exist}
 If we construct a policy $\pi^*$ by
 \begin{equation}\label{df:rho}
 \subp^{*}(s,a,t)=
 \begin{cases}
 \frac{\rho^*(s,a,t)}{\sum_{a\in\subactions}\rho^*(s,a,t)},\; \; \text{if }\sum_{a\in\subactions}\rho^*(s,a,t)>0\\
-\text{arbitrary}, \;\;\;\text{if }\sum_{a\in\subactions}\rho^*(s,a,t)=0 
+\frac{1}{|\subactions|}, \;\;\;\text{if }\sum_{a\in\subactions}\rho^*(s,a,t)=0 
 \end{cases}
-\end{equation}for all $s\in \substates,\subaction\in\subactions,1\leq t\leq T$, then $\pi^*$ is an optimal policy for $Q(\lambdav^*)$.
+\end{equation}for all $s\in \substates,\subaction\in\subactions,1\leq t\leq T$, then $\pi^*$ is an optimal policy for $Q(\lambdav^*)$, and satisfies
+\begin{equation}
+\mathbb{E}^{\pi^*}[A_t]=\frac{m_t}{K}.
+\end{equation} 
 \end{Lemma}
 Quick justification: 
 \begin{itemize}
@@ -318,73 +362,75 @@ Quick justification:
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-\begin{frame}
+\begin{frame}[plain]
 \frametitle{Pre-computations: 2. Occupation Measure $\rho^*$ of an optimal policy of $Q(\lambdav^*)$}
 Remark: 
 \begin{itemize}
-\item Any policy $\pi^*$ constructed using $\rho^*$ is an optimal solution to $Q(\lambdav^*)$ and satisfies
-\begin{equation}
-\mathbb{E}^{\pi^*}[A_t]=\frac{m_t}{K}.
-\end{equation} 
 \item Solving for $\rho^*$ requires solving an LP with $|\substates||\subactions|T$ variables and at most $T|\substates|$ constraints.
 \end{itemize}
 \end{frame}
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-\begin{frame}
-\frametitle{Pre-computations: 3. Indices of states}
+\subsubsection{Compute indices of states}
+%\begin{frame}[plain]
+%\frametitle{Pre-computations: 3. Indices of states}
+%
+%We first describe a specific way of computing an optimal policy $\pi^{\lambdav}$ of $Q(\lambdav)$:
+%
+%\vspace{0.5cm}
+%Define value functions $V^{\lambdav}:\substates\times \{1,...,T\}\mapsto \mathbb{R}$ of $Q(\lambdav)$ recursively by
+%\begin{equation}
+%V^{\lambdav}(s,t)=
+%\begin{cases}
+%	\max_{\subaction\in \subactions}\{r_T(s,a)-a\lambda_T\} \;\;\; \text{if $t=T$,}\\
+%	\max_{\subaction\in\subactions}\{r_t(s,a)-a\lambda_t+\sum_{s'\in\substates}P^{a}(s,s')V^{\lambdav}(s',t+1)\} \text{ o.w}
+%\end{cases} 
+%\end{equation}
+%Construct $\pi^{\lambdav}$ by
+%\begin{equation}
+%\pi^{\lambdav}(s,1,t)=
+%\begin{cases*}
+%1\;\;\;\text{if one-step lookahead value for $a=1$ is} \\
+%\;\;\;\;\;\text{greater than or equal to $a=0$}\\
+%0 \;\;\;\text{otherwise}
+%\end{cases*}
+%\end{equation}
+%\end{frame}
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
-We first describe a specific way of computing an optimal policy $\pi^{\lambdav}$ of $Q(\lambdav)$:
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+\begin{frame}[plain]
+\frametitle{Pre-computations: 3. Indices of states}
+Notation:
+\begin{itemize}
+\item Let $\pi^{\lambdav}$ be the optimal policy of $Q(\lambdav) $that always chooses to play when the forward value of playing is tied with the forward value of not playing.
+
+\item Use $\mathbf{v}[c,t]$ to denote $\mathbf{v}+(c-v_t)*\mathbf{e}_t$.
+
+\end{itemize}
+
+\vspace{0.3cm}
+We compute the index of a state $\substate\in\substates$ at time $t$ as
+\begin{equation}
+\beta_t(s) = \sup\{\beta: \pi^{\lambdav^*[\beta,t]}(s,1,t)=1\}
+\end{equation}
 
 \vspace{0.5cm}
-Define value functions $V^{\lambdav}:\substates\times \{1,...,T\}\mapsto \mathbb{R}$ of $Q(\lambdav)$ recursively by
-\begin{equation}
-V^{\lambdav}(s,t)=
-\begin{cases}
-	\max_{\subaction\in \subactions}\{r_T(s,a)-a\lambda_T\} \;\;\; \text{if $t=T$,}\\
-	\max_{\subaction\in\subactions}\{r_t(s,a)-a\lambda_t+\sum_{s'\in\substates}P^{a}(s,s')V^{\lambdav}(s',t+1)\} \text{ o.w}
-\end{cases} 
-\end{equation}
-Construct $\pi^{\lambdav}$ by
-\begin{equation}
-\pi^{\lambdav}(s,1,t)=
-\begin{cases*}
-1\;\;\;\text{if one-step lookahead value for $a=1$ is} \\
-\;\;\;\;\;\text{greater than or equal to $a=0$}\\
-0 \;\;\;\text{otherwise}
-\end{cases*}
-\end{equation}
+
+%Remark: Computing $\pi^{\lambdav}$ takes $O(|\substates||\subactions|T)$ time and space. Computational complexity for $\betav$ is $O(|\substates|^2|\subactions|T^2)$
 \end{frame}
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-\begin{frame}
-\frametitle{Pre-computations: 3. Indices of states}
-Use $\mathbf{v}[c,t]$ to denote $\mathbf{v}+(c-v_t)*\mathbf{e}_t$.
-
-\vspace{0.5cm}
-The index of a state $\substate\in\substates$ at time $t$ is defined by
-\begin{equation}
-\beta_t(s) = sup\{\beta: \pi^{\lambdav^*[\beta,t]}(s,1,t)=1\}
-\end{equation}
-
-\vspace{0.5cm}
-We compute $\betav = \{\beta_t(s):s\in\substates,1\leq t\leq T\}$
-
-
-\vspace{0.5cm}
-Remark: Computing $\pi^{\lambdav}$ takes $O(|\substates||\subactions|T)$ time and space. Computational complexity for $\betav$ is $O(|\substates|^2|\subactions|T^2)$
-\end{frame}
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-\begin{frame}{Algorithm of Index policy $\hat{\allp}$}
+\subsubsection{Algorithm of Index policy}
+\begin{frame}[plain]
+\frametitle{Algorithm of Index policy $\hat{\allp}$}
 \vspace{-0.3cm}
 \begin{algorithm}[H]
 \footnotesize
 \begin{algorithmic}
-\STATE Pre-compute: $\lambdav^*$; $\betav$; $\rho$. (Refer to earlier discussions for computation details) 
+\STATE Pre-compute: $\lambdav^*$; $\betav$; $\rho^*$. 
 \FOR{$t = 1,...,T$}
     \STATE Let $\beta_{t,[i]}$ be the $i^{th}$ largest element in the list $\beta_t(\allstater_{t,1}),...,\beta_t(\allstater_{t,K})$, so $\beta_{t,[1]}\geq\ldots\geq \beta_{t,[K]}$. 
     \STATE Let $\bar{\beta}_t = \beta_{t,[m_t]}$
@@ -413,20 +459,23 @@ Remark: Computing $\pi^{\lambdav}$ takes $O(|\substates||\subactions|T)$ time an
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-\begin{frame}
+\begin{frame}[plain]
 \frametitle{Algorithm of Index Policy $\hat{\pi}$}
 Remark:
 \begin{itemize}
-\item \textit{Rounding} takes care of all the corner cases.
 \item Computational complexity of $\hat{\pi}$ (exluding pre-computations) is $O(TKlog(K))$.
 \end{itemize}
 \end{frame}
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-\begin{frame}
+\subsection{Asymptotic optimaity of the index policy}
+\begin{frame}[plain]
+\tableofcontents[currentsubsection]
+\end{frame}
+\begin{frame}[plain]
 \frametitle{Asymptotic optimality of the index policy $\hat{\allp}$}
-Notations:
+Notation:
 \begin{itemize}
 \item For $\alphav\in \mathbb{R}^T$, and $c\in \mathbb{R}$, define $\lfloor\alphav c\rfloor=(\lfloor\alpha_1 c\rfloor,...,\lfloor\alpha_Tc\rfloor)$.
 \item Let $Z(\allp, \mv, K)$ denote the expected reward of the original MDP \eqref{prime}, with constraint $\mv=(m_1,...,m_T)$ and K sub-processes.
@@ -442,7 +491,7 @@ For any $\alphav \in [0,1]^T$,
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-\begin{frame}
+\begin{frame}[plain]
 \frametitle{Asymptotic optimality of the index policy $\hat{\allp}$}
 Notations:
 \begin{itemize}
@@ -464,9 +513,9 @@ and
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-\begin{frame}
+\begin{frame}[plain]
 \frametitle{Theorem 2 is proven by induction over time}
-An numerical illustration of Theorem 2 using an instance of MAB with $K=10000$
+A numerical illustration of Theorem 2 using an instance of MAB with $K=10000$
 \vspace{-0.3cm}
 \begin{figure}[tb]
 \captionsetup[subfigure]{labelformat=empty}
@@ -480,14 +529,14 @@ An numerical illustration of Theorem 2 using an instance of MAB with $K=10000$
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-\begin{frame}
+\begin{frame}[plain]
 \frametitle{Theorem 2 is proven by induction over time}
 Proof Intuition of Theorem 2 (Warning: lots of hand-waves):
 Assume Theorem 2 holds for time $t-1$.
 \begin{itemize}
-\item Proof of the first result holds at $t$:\\
+\item Proof that the first result holds at $t$:\\
 Same distribution of arms over state, same fraction of arms get to set active in each state $\Rightarrow$ same distribution of arms over state in the next time period.
-\item Proof of the second result holds at $t$:\\
+\item Proof that the second result holds at $t$:\\
 \begin{itemize}
 \item 1. $\{s\in \substates: \beta_t(s)>\lambda^*_t\}\approx \{s\in \substates: \pi^{*} \text{ chooses } a=1 \text{ in } s\}$.\\
 \hspace{0.05cm}2. $\pi^{*}$ chooses $a=1$ $\alpha_t$ of the time.
@@ -500,35 +549,39 @@ $\Rightarrow$  $\sum_{s\in \{s\in \substates: \beta_t(s)>\lambda^*_t\}}\frac{N_t
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-\begin{frame}
-\frametitle{Proof of Theorem 1}
-That $\hat{\allp}$ being feasible implies $$Z(\hat{\allp},\lfloor \alpha K\rfloor,K) \leq \max_{\allp\in\allpset_{\lfloor \alpha K\rfloor,K}}Z(\allp,\lfloor \alpha K\rfloor,K)$$.  Thus,
-\begin{equation*}
-\lim_{K\rightarrow\infty}\frac{1}{K}Z(\hat{\allp},\lfloor \alpha K\rfloor,K) \leq  \lim_{K\rightarrow\infty}\frac{1}{K}\sup_{\allp\in\allpset_{\lfloor \alpha K\rfloor,K}}Z(\allp,\lfloor \alpha K\rfloor,K).
-\end{equation*}
-\end{frame}
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+%\begin{frame}[plain]
+%\frametitle{Theorem 1 is proven }
+%That $\hat{\allp}$ being feasible implies $$Z(\hat{\allp},\lfloor \alpha K\rfloor,K) \leq \max_{\allp\in\allpset_{\lfloor \alpha K\rfloor,K}}Z(\allp,\lfloor \alpha K\rfloor,K)$$.  Thus,
+%\begin{equation*}
+%\lim_{K\rightarrow\infty}\frac{1}{K}Z(\hat{\allp},\lfloor \alpha K\rfloor,K) \leq  \lim_{K\rightarrow\infty}\frac{1}{K}\max_{\allp\in\allpset_{\lfloor \alpha K\rfloor,K}}Z(\allp,\lfloor \alpha K\rfloor,K).
+%\end{equation*}
+%\end{frame}
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+%
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+%\begin{frame}[plain]
+%\frametitle{Proof of Theorem 1 Cont'}
+%On the other hand,
+%\footnotesize
+%\begin{align*}
+%\lim_{K\rightarrow\infty}\frac{1}{K}Z(\hat{\allp},\lfloor \alpha K\rfloor,K) 
+%=&\lim_{K\rightarrow\infty}\frac{1}{K}\Eb^{\hat{\allp}}\left[\sum_{t=1}^{T}\sum_{s\in\substates}r_t(s,1) M_{t}(s)+r_t(s,0) (N_{t}(s)-M_{t}(s))\right]\\
+%=&\sum_{t=1}^{T}\sum_{s\in \substates}\left[r_t(s,1) \rho^*(s,1,t)+r_t(s,0) \rho^*(s,0,t) \right]\\
+%&\;\;\;\;\;-\mathbb{E}^{\subp^*}\left[\sum_{t}\lambda^*_t \left(A_t-\alpha_t\right)\right]\\
+%=& Q(\lambdav^*)+\alpha \sum\lambda^*_t\\
+%=& \lim_{K\rightarrow\infty}\frac{1}{K}(KQ(\lambdav^*)+\lfloor \alpha K \rfloor\sum\lambda^*_t)\\
+%=& \lim_{K\rightarrow\infty}\frac{1}{K} P(\lambdav^*,\lfloor \alpha K \rfloor, K)\\
+%\geq& \lim_{K\rightarrow\infty}\frac{1}{K}\sup_{\allp\in\allpset_{\lfloor \alpha K\rfloor,K}}Z(\allp,\lfloor \alpha K\rfloor,K).
+%\end{align*}
+%\end{frame}
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-\begin{frame}
-\frametitle{Proof of Theorem 1 Cont'}
-On the other hand,
-\footnotesize
-\begin{align*}
-\lim_{K\rightarrow\infty}\frac{1}{K}Z(\hat{\allp},\lfloor \alpha K\rfloor,K) 
-=&\lim_{K\rightarrow\infty}\frac{1}{K}\Eb^{\hat{\allp}}\left[\sum_{t=1}^{T}\sum_{s\in\substates}r_t(s,1) M_{t}(s)+r_t(s,0) (N_{t}(s)-M_{t}(s))\right]\\
-=&\sum_{t=1}^{T}\sum_{s\in \substates}\left[r_t(s,1) \rho^*(s,1,t)+r_t(s,0) \rho^*(s,0,t) \right]\\
-&\;\;\;\;\;-\mathbb{E}^{\subp^*}\left[\sum_{t}\lambda^*_t \left(A_t-\alpha_t\right)\right]\\
-=& Q(\lambdav^*)+\alpha \sum\lambda^*_t\\
-=& \lim_{K\rightarrow\infty}\frac{1}{K}(KQ(\lambdav^*)+\lfloor \alpha K \rfloor\sum\lambda^*_t)\\
-=& \lim_{K\rightarrow\infty}\frac{1}{K} P(\lambdav^*,\lfloor \alpha K \rfloor, K)\\
-\geq& \lim_{K\rightarrow\infty}\frac{1}{K}\sup_{\allp\in\allpset_{\lfloor \alpha K\rfloor,K}}Z(\allp,\lfloor \alpha K\rfloor,K).
-\end{align*}
+\subsection{Numerical experiments}
+\begin{frame}[plain]
+\tableofcontents[currentsubsection]
 \end{frame}
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-\begin{frame}
+\begin{frame}[plain]
 \frametitle{Numerical Experiments: Bernoulli MAB}
 $K$ arms, each returns a random reward of 0 or 1 when pulled. $T=6$, $\alpha_t=\frac{1}{3}$, for all $t$.\\
 The problem aims to maximize the total expected reward.
@@ -540,7 +593,7 @@ The problem aims to maximize the total expected reward.
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-\begin{frame}
+\begin{frame}[plain]
 \frametitle{Numerical Experiments: Subset Selection Problem}
 $K$ designs, $m$ parallel computing resources. $T=5$\\
 $\alpha_t = 0.5$ for $1\leq t\leq 4$. $\alpha_5=0.3$\\
@@ -552,7 +605,9 @@ The problem aims to select the best $\bar{m}$ designs out of $K$.
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-\begin{frame}
+\section{Index policy for other RMAB-like applications}
+\subsection{MCS}
+\begin{frame}[plain]
 \frametitle{Application 1: Multiple Selection with Standard}
 \begin{itemize}
 \item $k$ alternatives
@@ -569,8 +624,8 @@ x\end{frame}
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-\begin{frame}
-\frametitle{Application 1: Multiple Selection with Standard}
+\begin{frame}[plain]
+\frametitle{Application 1: Multiple Comparison with Known Standard}
 For each $k=2,4,8,16$
 \begin{itemize}
 \item $m = k$
@@ -589,7 +644,8 @@ Conjecture: The index policy has asymptotic optimality as $m$ and $K$ goes to in
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-\begin{frame}
+\subsection{crowdsourcing}
+\begin{frame}[plain]
 \frametitle{Application 2: Classification with Crowdsourcing}
 \begin{itemize}
 \item $k$ labeling tasks
@@ -604,7 +660,7 @@ Conjecture: The index policy has asymptotic optimality as $m$ and $K$ goes to in
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-\begin{frame}
+\begin{frame}[plain]
 \frametitle{Application 2: Classification with Crowdsourcing}
 Queue: $r=0.1$, $\mu=0.4$, $K = 10,100,1000$, $U = 1.2K$. \\
 We use a non-informative prior with $\alphav = \mathbf{1}$ and $\betav = \mathbf{1}$, and a threshold $d_x = 0.5$ for all the tasks. 
@@ -615,7 +671,7 @@ We use a non-informative prior with $\alphav = \mathbf{1}$ and $\betav = \mathbf
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-\begin{frame}
+\begin{frame}[plain]
 \frametitle{Application 2: Classification with Crowdsourcing}
 We used dataset PASCAL RTE-1\cite{Snow2008}, which consists of 800 tasks, each comes with 10 labels obtained from crowdworkers and a gold standard label\\
 
@@ -628,7 +684,8 @@ Conjecture: The index policy has asymptotic optimality as $U$ and $K$ goes to in
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-\begin{frame}
+\section{Conclusion}
+\begin{frame}[plain]
 \frametitle{Conclusion}
 Index policies under different setting show asymptotically optimal behaviors while significantly reduce the computational complexity.
 
